fix z-index

--- a/src/modules/buildim/buildim.module.scss
+++ b/src/modules/buildim/buildim.module.scss
@@ -33,6 +33,7 @@
     letter-spacing: 0;
     max-width: 456px;
     text-align: right;
+		font-weight: 400;
 
 		@include tablet {
 			margin-bottom: 223px;
